--- a/algorithm_mhu_plus_lambda.ipynb
+++ b/algorithm_mhu_plus_lambda.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 125,
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -28,14 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 126,
    "outputs": [],
    "source": [
+    "class Mutation:\n",
+    "    def __init__(self, value, fit):\n",
+    "        self.value = value\n",
+    "        self.fit = fit\n",
+    "\n",
+    "    def __gt__(self, mutation2):\n",
+    "        return self.fit > mutation2.fit\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"Mutation-Fitness: \" + str(self.fit)\n",
+    "\n",
     "def sphere(value):\n",
     "    return np.dot(value.T, value)\n",
     "\n",
-    "def crossover_by_mean(*parents):\n",
-    "    return sum(parents) / len(parents)"
+    "def crossover(parent1, parent2):\n",
+    "    return (parent1.value + parent2.value) / 2\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -46,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 127,
    "outputs": [],
    "source": [
-    "N = 5\n",
-    "x = 2 * np.ones(N)"
+    "n = 5\n",
+    "x = 2 * np.ones(n)"
    ],
    "metadata": {
     "collapsed": false,
@@ -61,56 +72,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 128,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[22.58937842 18.3021992  28.83608792 25.02224302 17.11435928 24.80650832\n",
-      " 24.05380449 16.75107818 25.67317589 17.70402399 18.82751445 28.80536833\n",
-      " 18.51301927 43.86106593 21.94245859 13.25149367 17.0860899  49.99196467\n",
-      " 23.77475658]\n",
-      "The last generation is: [ 13.25149367  16.75107818  17.0860899   17.11435928  17.70402399\n",
-      "  18.3021992   18.51301927  18.82751445  21.94245859  22.58937842\n",
-      "  23.77475658  24.05380449  24.80650832  25.02224302  25.67317589\n",
-      "  28.80536833  28.83608792  43.86106593  49.99196467 828.95864796]\n"
+      "The first generation is: Mutation-Fitness: 25.462956854751855, Mutation-Fitness: 28.60593614095617, Mutation-Fitness: 32.15670243296411, Mutation-Fitness: 27.196262709104857, Mutation-Fitness: 31.69362552758428, Mutation-Fitness: 16.58365850863743, Mutation-Fitness: 19.973532516738352, Mutation-Fitness: 29.81947131155022, Mutation-Fitness: 29.644747654308247, Mutation-Fitness: 28.985612298720586, Mutation-Fitness: 22.00771808256678, Mutation-Fitness: 12.929936917484788, Mutation-Fitness: 27.190775681239803, Mutation-Fitness: 37.15077832417415, Mutation-Fitness: 28.348164107623425, Mutation-Fitness: 21.858958920071096, Mutation-Fitness: 22.823704664625478, Mutation-Fitness: 30.722887972722376, Mutation-Fitness: 33.0201942305719\n",
+      "\n",
+      "The last generation is: Mutation-Fitness: 0.056056071555010675, Mutation-Fitness: 0.09028728710175166, Mutation-Fitness: 0.10197587242650737, Mutation-Fitness: 0.1198501204461074, Mutation-Fitness: 0.1580692662118852, Mutation-Fitness: 0.16151806092137785, Mutation-Fitness: 0.17224722967338335, Mutation-Fitness: 0.19155220798334152, Mutation-Fitness: 0.19395932817907655, Mutation-Fitness: 0.2053734910114802, Mutation-Fitness: 0.21820059422701493, Mutation-Fitness: 0.2239209536541561, Mutation-Fitness: 0.2334540677649025, Mutation-Fitness: 0.24463089686904993, Mutation-Fitness: 0.24877044611046112, Mutation-Fitness: 0.25008710671840495, Mutation-Fitness: 0.26013783012766395, Mutation-Fitness: 0.26227544447058077, Mutation-Fitness: 0.27006412604722563\n"
      ]
     }
    ],
    "source": [
     "generation = 0\n",
-    "sigma = 1.\n",
+    "sigma = 1.0\n",
     "parents_mhu = 20\n",
-    "mutations_lambda = 20\n",
+    "mutations_lambda = 10\n",
     "population = []\n",
     "\n",
     "# Generate initial mhu parents for population\n",
     "for i in range(1, parents_mhu):\n",
-    "    x_ = x + sigma * np.random.randn(N)\n",
+    "    x_ = x + sigma * np.random.randn(n)\n",
     "    fitness = sphere(x_)\n",
-    "    population = np.append(population, fitness)\n",
-    "print(population)\n",
+    "\n",
+    "    mutation = Mutation(x_, fitness)\n",
+    "    population.append(mutation)\n",
+    "print(\"The first generation is:\", \", \".join([str(m) for m in population]))\n",
+    "print()\n",
     "\n",
     "# Compute 100 generations\n",
-    "while generation < 100:\n",
-    "    # Crossover with 2 parents and arithmetic mean value (repeat for number of mutations)\n",
+    "while generation < 1000:\n",
+    "    # Crossover with 2 parents and intermediate recombination by mean value (repeat for number of mutations)\n",
     "    for i in range(1, mutations_lambda):\n",
-    "        parent1 = np.random.choice(population)\n",
-    "        parent2 = np.random.choice(population)\n",
-    "        mean_value = crossover_by_mean(parent1, parent2)\n",
-    "        mean_value_ = mean_value + sigma * np.random.randn(N)\n",
+    "        mean_value = crossover(population[0], population[1])\n",
+    "        # Mutation\n",
+    "        mean_value_ = mean_value + sigma * np.random.randn(n)\n",
     "        fitness_ = sphere(mean_value_)\n",
-    "        population = np.append(population, fitness_)\n",
+    "\n",
+    "        mutation = Mutation(mean_value_, fitness_)\n",
+    "        population.append(mutation)\n",
     "\n",
     "    # Now select the best (minimal) mhu parents out of complete population (parent + mutations)\n",
-    "    population_array = np.sort(population)\n",
-    "    population = population_array[:parents_mhu]\n",
+    "    population.sort()\n",
+    "    population = population[:parents_mhu - 1]\n",
     "    generation += 1\n",
     "\n",
     "# Return the last generation\n",
-    "print(\"The last generation is:\", population)"
+    "print(\"The last generation is:\", \", \".join([str(m) for m in population]))"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
