choose random parents for ES

--- a/algorithm_mhu_plus_lambda.ipynb
+++ b/algorithm_mhu_plus_lambda.ipynb
@@ -14,10 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 145,
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random as rdm"
    ],
    "metadata": {
     "collapsed": false,
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 146,
    "outputs": [],
    "source": [
     "class Mutation:\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 147,
    "outputs": [],
    "source": [
     "n = 5\n",
@@ -72,15 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 148,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The first generation is: Mutation-Fitness: 25.462956854751855, Mutation-Fitness: 28.60593614095617, Mutation-Fitness: 32.15670243296411, Mutation-Fitness: 27.196262709104857, Mutation-Fitness: 31.69362552758428, Mutation-Fitness: 16.58365850863743, Mutation-Fitness: 19.973532516738352, Mutation-Fitness: 29.81947131155022, Mutation-Fitness: 29.644747654308247, Mutation-Fitness: 28.985612298720586, Mutation-Fitness: 22.00771808256678, Mutation-Fitness: 12.929936917484788, Mutation-Fitness: 27.190775681239803, Mutation-Fitness: 37.15077832417415, Mutation-Fitness: 28.348164107623425, Mutation-Fitness: 21.858958920071096, Mutation-Fitness: 22.823704664625478, Mutation-Fitness: 30.722887972722376, Mutation-Fitness: 33.0201942305719\n",
+      "The first generation is: Mutation-Fitness: 29.693444844516527, Mutation-Fitness: 23.99484995177145, Mutation-Fitness: 13.620174883387838, Mutation-Fitness: 37.78973860747794, Mutation-Fitness: 12.661069834454423, Mutation-Fitness: 16.822901127986672, Mutation-Fitness: 40.07770853364602, Mutation-Fitness: 17.257693007815192, Mutation-Fitness: 42.02621932018596, Mutation-Fitness: 18.18761039179214, Mutation-Fitness: 6.908567812578843, Mutation-Fitness: 18.063868307529535, Mutation-Fitness: 36.6202043501987, Mutation-Fitness: 29.562769757107905, Mutation-Fitness: 27.450955182461122, Mutation-Fitness: 14.999185335863512, Mutation-Fitness: 24.993757324065704, Mutation-Fitness: 37.79959667463285, Mutation-Fitness: 27.739059144999434\n",
       "\n",
-      "The last generation is: Mutation-Fitness: 0.056056071555010675, Mutation-Fitness: 0.09028728710175166, Mutation-Fitness: 0.10197587242650737, Mutation-Fitness: 0.1198501204461074, Mutation-Fitness: 0.1580692662118852, Mutation-Fitness: 0.16151806092137785, Mutation-Fitness: 0.17224722967338335, Mutation-Fitness: 0.19155220798334152, Mutation-Fitness: 0.19395932817907655, Mutation-Fitness: 0.2053734910114802, Mutation-Fitness: 0.21820059422701493, Mutation-Fitness: 0.2239209536541561, Mutation-Fitness: 0.2334540677649025, Mutation-Fitness: 0.24463089686904993, Mutation-Fitness: 0.24877044611046112, Mutation-Fitness: 0.25008710671840495, Mutation-Fitness: 0.26013783012766395, Mutation-Fitness: 0.26227544447058077, Mutation-Fitness: 0.27006412604722563\n"
+      "The last generation is: Mutation-Fitness: 0.3121372996679014, Mutation-Fitness: 0.366205681622295, Mutation-Fitness: 0.40316534462923587, Mutation-Fitness: 0.46561955776215413, Mutation-Fitness: 0.4720526572916037, Mutation-Fitness: 0.512441629476228, Mutation-Fitness: 0.5632318414070542, Mutation-Fitness: 0.566163014514379, Mutation-Fitness: 0.5851346898827092, Mutation-Fitness: 0.5889548237898758, Mutation-Fitness: 0.6137998826713191, Mutation-Fitness: 0.6195650534080599, Mutation-Fitness: 0.779395858076552, Mutation-Fitness: 0.810022981349347, Mutation-Fitness: 0.8178087376628946, Mutation-Fitness: 0.8694969884545447, Mutation-Fitness: 0.890068110190366, Mutation-Fitness: 0.9308722675640526, Mutation-Fitness: 0.9736055660112707\n"
      ]
     }
    ],
@@ -102,10 +103,12 @@
     "print()\n",
     "\n",
     "# Compute 100 generations\n",
-    "while generation < 1000:\n",
+    "while generation < 100:\n",
     "    # Crossover with 2 parents and intermediate recombination by mean value (repeat for number of mutations)\n",
     "    for i in range(1, mutations_lambda):\n",
-    "        mean_value = crossover(population[0], population[1])\n",
+    "        first_parent = rdm.randrange(len(population))\n",
+    "        second_parent = rdm.randrange(len(population))\n",
+    "        mean_value = crossover(population[first_parent], population[second_parent])\n",
     "        # Mutation\n",
     "        mean_value_ = mean_value + sigma * np.random.randn(n)\n",
     "        fitness_ = sphere(mean_value_)\n",
