fix parent comment

--- a/algorithm_mue_plus_lambda.ipynb
+++ b/algorithm_mue_plus_lambda.ipynb
@@ -199,7 +199,7 @@
     "\n",
     "# Compute 100 generations\n",
     "while generation <= 100:\n",
-    "    # Crossover with 2 parents and intermediate recombination by mean value (repeat for number of mutations)\n",
+    "    # Crossover with 2 parents (p=2) and intermediate recombination by mean value (repeat for lambda number of mutations)\n",
     "    for i in range(1, mutations_lambda):\n",
     "        first_parent = rdm.randrange(len(population))\n",
     "        second_parent = rdm.randrange(len(population))\n",
