--- a/algorithm_1_plus_1.ipynb
+++ b/algorithm_1_plus_1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import math\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def sphere_function(value):\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "N = 5\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -86,104 +86,104 @@
      "text": [
       "In generation 1 we have a fitness of: 20.0\n",
       "In generation 2 we have a fitness of: 20.0\n",
-      "In generation 3 we have a fitness of: 20.0\n",
-      "In generation 4 we have a fitness of: 20.0\n",
-      "In generation 5 we have a fitness of: 20.0\n",
-      "In generation 6 we have a fitness of: 20.0\n",
-      "In generation 7 we have a fitness of: 20.0\n",
-      "In generation 8 we have a fitness of: 20.0\n",
-      "In generation 9 we have a fitness of: 20.0\n",
-      "In generation 10 we have a fitness of: 20.0\n",
-      "In generation 11 we have a fitness of: 20.0\n",
-      "In generation 12 we have a fitness of: 20.0\n",
-      "In generation 13 we have a fitness of: 20.0\n",
-      "In generation 14 we have a fitness of: 20.0\n",
-      "In generation 15 we have a fitness of: 20.0\n",
-      "In generation 16 we have a fitness of: 20.0\n",
-      "In generation 17 we have a fitness of: 20.0\n",
-      "In generation 18 we have a fitness of: 20.0\n",
-      "In generation 19 we have a fitness of: 20.0\n",
-      "In generation 20 we have a fitness of: 20.0\n",
-      "In generation 21 we have a fitness of: 20.0\n",
-      "In generation 22 we have a fitness of: 20.0\n",
-      "In generation 23 we have a fitness of: 20.0\n",
-      "In generation 24 we have a fitness of: 20.0\n",
-      "In generation 25 we have a fitness of: 20.0\n",
-      "In generation 26 we have a fitness of: 20.0\n",
-      "In generation 27 we have a fitness of: 20.0\n",
-      "In generation 28 we have a fitness of: 20.0\n",
-      "In generation 29 we have a fitness of: 20.0\n",
-      "In generation 30 we have a fitness of: 20.0\n",
-      "In generation 31 we have a fitness of: 20.0\n",
-      "In generation 32 we have a fitness of: 20.0\n",
-      "In generation 33 we have a fitness of: 20.0\n",
-      "In generation 34 we have a fitness of: 20.0\n",
-      "In generation 35 we have a fitness of: 20.0\n",
-      "In generation 36 we have a fitness of: 20.0\n",
-      "In generation 37 we have a fitness of: 20.0\n",
-      "In generation 38 we have a fitness of: 20.0\n",
-      "In generation 39 we have a fitness of: 20.0\n",
-      "In generation 40 we have a fitness of: 20.0\n",
-      "In generation 41 we have a fitness of: 20.0\n",
-      "In generation 42 we have a fitness of: 20.0\n",
-      "In generation 43 we have a fitness of: 20.0\n",
-      "In generation 44 we have a fitness of: 20.0\n",
-      "In generation 45 we have a fitness of: 20.0\n",
-      "In generation 46 we have a fitness of: 20.0\n",
-      "In generation 47 we have a fitness of: 20.0\n",
-      "In generation 48 we have a fitness of: 20.0\n",
-      "In generation 49 we have a fitness of: 20.0\n",
-      "In generation 50 we have a fitness of: 20.0\n",
-      "In generation 51 we have a fitness of: 20.0\n",
-      "In generation 52 we have a fitness of: 20.0\n",
-      "In generation 53 we have a fitness of: 20.0\n",
-      "In generation 54 we have a fitness of: 20.0\n",
-      "In generation 55 we have a fitness of: 20.0\n",
-      "In generation 56 we have a fitness of: 20.0\n",
-      "In generation 57 we have a fitness of: 20.0\n",
-      "In generation 58 we have a fitness of: 20.0\n",
-      "In generation 59 we have a fitness of: 20.0\n",
-      "In generation 60 we have a fitness of: 20.0\n",
-      "In generation 61 we have a fitness of: 20.0\n",
-      "In generation 62 we have a fitness of: 20.0\n",
-      "In generation 63 we have a fitness of: 20.0\n",
-      "In generation 64 we have a fitness of: 20.0\n",
-      "In generation 65 we have a fitness of: 20.0\n",
-      "In generation 66 we have a fitness of: 20.0\n",
-      "In generation 67 we have a fitness of: 20.0\n",
-      "In generation 68 we have a fitness of: 20.0\n",
-      "In generation 69 we have a fitness of: 20.0\n",
-      "In generation 70 we have a fitness of: 20.0\n",
-      "In generation 71 we have a fitness of: 20.0\n",
-      "In generation 72 we have a fitness of: 20.0\n",
-      "In generation 73 we have a fitness of: 20.0\n",
-      "In generation 74 we have a fitness of: 20.0\n",
-      "In generation 75 we have a fitness of: 20.0\n",
-      "In generation 76 we have a fitness of: 20.0\n",
-      "In generation 77 we have a fitness of: 20.0\n",
-      "In generation 78 we have a fitness of: 20.0\n",
-      "In generation 79 we have a fitness of: 20.0\n",
-      "In generation 80 we have a fitness of: 20.0\n",
-      "In generation 81 we have a fitness of: 20.0\n",
-      "In generation 82 we have a fitness of: 20.0\n",
-      "In generation 83 we have a fitness of: 20.0\n",
-      "In generation 84 we have a fitness of: 20.0\n",
-      "In generation 85 we have a fitness of: 20.0\n",
-      "In generation 86 we have a fitness of: 20.0\n",
-      "In generation 87 we have a fitness of: 20.0\n",
-      "In generation 88 we have a fitness of: 20.0\n",
-      "In generation 89 we have a fitness of: 20.0\n",
-      "In generation 90 we have a fitness of: 20.0\n",
-      "In generation 91 we have a fitness of: 20.0\n",
-      "In generation 92 we have a fitness of: 20.0\n",
-      "In generation 93 we have a fitness of: 20.0\n",
-      "In generation 94 we have a fitness of: 20.0\n",
-      "In generation 95 we have a fitness of: 20.0\n",
-      "In generation 96 we have a fitness of: 20.0\n",
-      "In generation 97 we have a fitness of: 20.0\n",
-      "In generation 98 we have a fitness of: 20.0\n",
-      "In generation 99 we have a fitness of: 20.0\n",
-      "In generation 100 we have a fitness of: 20.0\n"
+      "In generation 3 we have a fitness of: 14.126491309236116\n",
+      "In generation 4 we have a fitness of: 14.126491309236116\n",
+      "In generation 5 we have a fitness of: 14.126491309236116\n",
+      "In generation 6 we have a fitness of: 10.615022536325423\n",
+      "In generation 7 we have a fitness of: 10.615022536325423\n",
+      "In generation 8 we have a fitness of: 10.615022536325423\n",
+      "In generation 9 we have a fitness of: 2.2505657154371574\n",
+      "In generation 10 we have a fitness of: 2.2505657154371574\n",
+      "In generation 11 we have a fitness of: 2.2505657154371574\n",
+      "In generation 12 we have a fitness of: 2.2505657154371574\n",
+      "In generation 13 we have a fitness of: 2.2505657154371574\n",
+      "In generation 14 we have a fitness of: 2.2505657154371574\n",
+      "In generation 15 we have a fitness of: 2.2505657154371574\n",
+      "In generation 16 we have a fitness of: 2.2505657154371574\n",
+      "In generation 17 we have a fitness of: 2.2505657154371574\n",
+      "In generation 18 we have a fitness of: 2.2505657154371574\n",
+      "In generation 19 we have a fitness of: 2.2505657154371574\n",
+      "In generation 20 we have a fitness of: 1.542464668041423\n",
+      "In generation 21 we have a fitness of: 1.542464668041423\n",
+      "In generation 22 we have a fitness of: 1.542464668041423\n",
+      "In generation 23 we have a fitness of: 1.542464668041423\n",
+      "In generation 24 we have a fitness of: 1.542464668041423\n",
+      "In generation 25 we have a fitness of: 1.542464668041423\n",
+      "In generation 26 we have a fitness of: 1.08231622278839\n",
+      "In generation 27 we have a fitness of: 1.08231622278839\n",
+      "In generation 28 we have a fitness of: 1.08231622278839\n",
+      "In generation 29 we have a fitness of: 1.08231622278839\n",
+      "In generation 30 we have a fitness of: 1.08231622278839\n",
+      "In generation 31 we have a fitness of: 1.08231622278839\n",
+      "In generation 32 we have a fitness of: 1.08231622278839\n",
+      "In generation 33 we have a fitness of: 0.9200666299767936\n",
+      "In generation 34 we have a fitness of: 0.9200666299767936\n",
+      "In generation 35 we have a fitness of: 0.9200666299767936\n",
+      "In generation 36 we have a fitness of: 0.9200666299767936\n",
+      "In generation 37 we have a fitness of: 0.9200666299767936\n",
+      "In generation 38 we have a fitness of: 0.8708027008019\n",
+      "In generation 39 we have a fitness of: 0.8708027008019\n",
+      "In generation 40 we have a fitness of: 0.8708027008019\n",
+      "In generation 41 we have a fitness of: 0.8708027008019\n",
+      "In generation 42 we have a fitness of: 0.3347242310382802\n",
+      "In generation 43 we have a fitness of: 0.3347242310382802\n",
+      "In generation 44 we have a fitness of: 0.3347242310382802\n",
+      "In generation 45 we have a fitness of: 0.3347242310382802\n",
+      "In generation 46 we have a fitness of: 0.3347242310382802\n",
+      "In generation 47 we have a fitness of: 0.3347242310382802\n",
+      "In generation 48 we have a fitness of: 0.3347242310382802\n",
+      "In generation 49 we have a fitness of: 0.18999164257343196\n",
+      "In generation 50 we have a fitness of: 0.18999164257343196\n",
+      "In generation 51 we have a fitness of: 0.18999164257343196\n",
+      "In generation 52 we have a fitness of: 0.18999164257343196\n",
+      "In generation 53 we have a fitness of: 0.18999164257343196\n",
+      "In generation 54 we have a fitness of: 0.18999164257343196\n",
+      "In generation 55 we have a fitness of: 0.09618312003099937\n",
+      "In generation 56 we have a fitness of: 0.09618312003099937\n",
+      "In generation 57 we have a fitness of: 0.09618312003099937\n",
+      "In generation 58 we have a fitness of: 0.09618312003099937\n",
+      "In generation 59 we have a fitness of: 0.09618312003099937\n",
+      "In generation 60 we have a fitness of: 0.09618312003099937\n",
+      "In generation 61 we have a fitness of: 0.09618312003099937\n",
+      "In generation 62 we have a fitness of: 0.09618312003099937\n",
+      "In generation 63 we have a fitness of: 0.09618312003099937\n",
+      "In generation 64 we have a fitness of: 0.09618312003099937\n",
+      "In generation 65 we have a fitness of: 0.09618312003099937\n",
+      "In generation 66 we have a fitness of: 0.09618312003099937\n",
+      "In generation 67 we have a fitness of: 0.09618312003099937\n",
+      "In generation 68 we have a fitness of: 0.09618312003099937\n",
+      "In generation 69 we have a fitness of: 0.07817083517242152\n",
+      "In generation 70 we have a fitness of: 0.0513858798804243\n",
+      "In generation 71 we have a fitness of: 0.03361693498487563\n",
+      "In generation 72 we have a fitness of: 0.03361693498487563\n",
+      "In generation 73 we have a fitness of: 0.03361693498487563\n",
+      "In generation 74 we have a fitness of: 0.03361693498487563\n",
+      "In generation 75 we have a fitness of: 0.03361693498487563\n",
+      "In generation 76 we have a fitness of: 0.03361693498487563\n",
+      "In generation 77 we have a fitness of: 0.03361693498487563\n",
+      "In generation 78 we have a fitness of: 0.03361693498487563\n",
+      "In generation 79 we have a fitness of: 0.03361693498487563\n",
+      "In generation 80 we have a fitness of: 0.021722654241989044\n",
+      "In generation 81 we have a fitness of: 0.021722654241989044\n",
+      "In generation 82 we have a fitness of: 0.021722654241989044\n",
+      "In generation 83 we have a fitness of: 0.021722654241989044\n",
+      "In generation 84 we have a fitness of: 0.021722654241989044\n",
+      "In generation 85 we have a fitness of: 0.021722654241989044\n",
+      "In generation 86 we have a fitness of: 0.021722654241989044\n",
+      "In generation 87 we have a fitness of: 0.013524793764934215\n",
+      "In generation 88 we have a fitness of: 0.013524793764934215\n",
+      "In generation 89 we have a fitness of: 0.013524793764934215\n",
+      "In generation 90 we have a fitness of: 0.013524793764934215\n",
+      "In generation 91 we have a fitness of: 0.013524793764934215\n",
+      "In generation 92 we have a fitness of: 0.013524793764934215\n",
+      "In generation 93 we have a fitness of: 0.010465523630678172\n",
+      "In generation 94 we have a fitness of: 0.010465523630678172\n",
+      "In generation 95 we have a fitness of: 0.010465523630678172\n",
+      "In generation 96 we have a fitness of: 0.010465523630678172\n",
+      "In generation 97 we have a fitness of: 0.010465523630678172\n",
+      "In generation 98 we have a fitness of: 0.010465523630678172\n",
+      "In generation 99 we have a fitness of: 0.010465523630678172\n",
+      "In generation 100 we have a fitness of: 0.010465523630678172\n"
      ]
     }
    ],
@@ -191,11 +191,11 @@
     "generation = 1\n",
     "sigma = 1.0\n",
     "\n",
-    "fitness = rastrigin_function(x)\n",
+    "fitness = sphere_function(x)\n",
     "\n",
     "while generation <= 100:\n",
     "    x_ = x + sigma * np.random.randn(N)\n",
-    "    fitness_ = rosenbrock_function(x_)\n",
+    "    fitness_ = sphere_function(x_)\n",
     "\n",
     "    if fitness_ <= fitness:\n",
     "        x = x_\n",
@@ -223,8 +223,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
