Add 1+lambda ES with Evolution Path (WIP)

--- a/algorithm_1+1_rechenberg.ipynb
+++ b/algorithm_1+1_rechenberg.ipynb
@@ -63,21 +63,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "outputs": [],
-   "source": [
-    "N = 5\n",
-    "x = 2 * np.ones(N)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "outputs": [
     {
@@ -188,6 +173,8 @@
     }
    ],
    "source": [
+    "N = 5\n",
+    "x = 2 * np.ones(N)\n",
     "generation = 1\n",
     "sigma = 1.0\n",
     "\n",
