Refactor class name

--- a/algorithm_1,lambda_evolution_path.ipynb
+++ b/algorithm_1,lambda_evolution_path.ipynb
@@ -31,7 +31,7 @@
    "execution_count": 26,
    "outputs": [],
    "source": [
-    "class Mutation:\n",
+    "class Candidate:\n",
     "    def __init__(self, xm, fit, zm):\n",
     "        self.xm = xm\n",
     "        self.zm = zm\n",
@@ -203,8 +203,8 @@
     "        z = np.random.randn(N)\n",
     "        x_ = x + sigma * z\n",
     "        fitness = sphere_function(x_)\n",
-    "        mutation = Mutation(x_, fitness, z)\n",
-    "        population.append(mutation)\n",
+    "        candidate = Candidate(x_, fitness, z)\n",
+    "        population.append(candidate)\n",
     "\n",
     "    # Select the 1 best candidate (x_, z) by sorting fitness\n",
     "    population.sort()\n",
