--- a/algorithm_1,lambda_sigma-SA.ipynb
+++ b/algorithm_1,lambda_sigma-SA.ipynb
@@ -31,7 +31,7 @@
    "execution_count": 28,
    "outputs": [],
    "source": [
-    "class Mutation:\n",
+    "class Candidate:\n",
     "    def __init__(self, x_m, sigma_m, fit):\n",
     "        self.x_m = x_m\n",
     "        self.sigma_m = sigma_m\n",
@@ -204,8 +204,8 @@
     "        sigma_ = sigma * np.exp(xi)\n",
     "        x_ = x + sigma_ * z\n",
     "        fitness = sphere_function(x_)\n",
-    "        mutation = Mutation(x_, sigma_, fitness)\n",
-    "        population.append(mutation)\n",
+    "        candidate = Candidate(x_, sigma_, fitness)\n",
+    "        population.append(candidate)\n",
     "\n",
     "    # Select the 1 best candidate (x_, sigma_) by sorting fitness\n",
     "    population.sort()\n",
