--- a/algorithm_mue+lambda.ipynb
+++ b/algorithm_mue+lambda.ipynb
@@ -33,7 +33,7 @@
    "execution_count": 16,
    "outputs": [],
    "source": [
-    "class Mutation:\n",
+    "class Candidate:\n",
     "    def __init__(self, value, fit):\n",
     "        self.value = value\n",
     "        self.fit = fit\n",
@@ -192,8 +192,8 @@
     "    x_ = x + sigma * np.random.randn(n)\n",
     "    fitness = sphere(x_)\n",
     "\n",
-    "    mutation = Mutation(x_, fitness)\n",
-    "    population.append(mutation)\n",
+    "    candidate = Candidate(x_, fitness)\n",
+    "    population.append(candidate)\n",
     "print(\"The first generation is:\", \", \".join([str(m) for m in population]))\n",
     "print()\n",
     "\n",
@@ -208,8 +208,8 @@
     "        mean_value_ = mean_value + sigma * np.random.randn(n)\n",
     "        fitness_ = sphere(mean_value_)\n",
     "\n",
-    "        mutation = Mutation(mean_value_, fitness_)\n",
-    "        population.append(mutation)\n",
+    "        candidate = Candidate(mean_value_, fitness_)\n",
+    "        population.append(candidate)\n",
     "\n",
     "    # TODO: Try to implement Rechenberg with a 5-step generation window (larger than 1/5 with s/gen-window)\n",
     "    # TODO: Reset the success counter to empty after 5 steps to do it again\n",
