--- a/snippets.ipynb
+++ b/snippets.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.113142990518603\n"
+      "9.971514049705918\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
     "_sum = 0\n",
     "\n",
     "for i in range(1000):\n",
-    "    norm = np.linalg.norm(np.random.randn(5))\n",
+    "    norm = np.linalg.norm(np.random.randn(100))\n",
     "    _sum = _sum + norm\n",
     "\n",
     "expectedValue = _sum / 1000\n",
@@ -46,41 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8445755251784713\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.linalg.norm(np.random.randn(5)))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
-      "text/plain": "2.124454078510189"
+      "text/plain": "9.974968671630002"
      },
-     "execution_count": 22,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum([np.linalg.norm(np.random.randn(5)) for e in range(1000)]) / 1000"
+    "np.sqrt(100 - 1/2)"
    ],
    "metadata": {
     "collapsed": false,
