rename files for better understanding

--- a/snippets.ipynb
+++ b/snippets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Expected value of 5-dimensional N(0, 1)"
+    "Example for approximation of expected vector \"norm\" value for 5-dimensional gaussion distribution N(0, 1)."
    ],
    "metadata": {
     "collapsed": false,
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.971514049705918\n"
+      "9.996407748869203\n"
      ]
     }
    ],
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "9.974968671630002"
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,18 +60,6 @@
    "source": [
     "np.sqrt(100 - 1/2)"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
